chore: Github Actions를 활용한 Docker image 빌드 (#5)
* chore: add mysql dependency

* fix: update API key vars to build project

* chore: split application.yml into local and prod

* chore: load the API Key from the environment variable

* chore: remove application.yml for testing and add sample configuration

* refactor: change the method of loading RSA Key for Docker image build

* chore: add Dockerfile

* chore: add github actions for building Docker image