@@ -1,10 +1,5 @@
 package tourapi24.backend.config;
 
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
-import org.springframework.core.io.Resource;
-
 import java.io.IOException;
 import java.nio.file.Files;
 import java.security.*;
@@ -14,14 +9,18 @@ import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.time.Clock;
 import java.util.Base64;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.core.io.Resource;
 
 @Configuration
 public class JwtConfig {
 
-    @Value("classpath:private_key.pem") // main/resources/private_key.pem
+    @Value("classpath:private_key.pem")
     private Resource privateKeyResource;
 
-    @Value("classpath:public_key.pem") // main/resources/public_key.pem
+    @Value("classpath:public_key.pem")
     private Resource publicKeyResource;
 
     @Bean
@@ -30,17 +29,21 @@ public class JwtConfig {
     }
 
     @Bean
-    public KeyPair keyPair() throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
+    public KeyPair keyPair()
+        throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
         PrivateKey privateKey = loadPrivateKey();
         PublicKey publicKey = loadPublicKey();
         return new KeyPair(publicKey, privateKey);
     }
 
-    private PrivateKey loadPrivateKey() throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
-        String privateKeyPEM = new String(Files.readAllBytes(privateKeyResource.getFile().toPath()))
-                .replace("-----BEGIN PRIVATE KEY-----", "")
-                .replace("-----END PRIVATE KEY-----", "")
-                .replaceAll("\\s", "");
+    private PrivateKey loadPrivateKey()
+        throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
+        String privateKeyPEM = new String(
+            privateKeyResource.getInputStream().readAllBytes()
+        )
+            .replace("-----BEGIN PRIVATE KEY-----", "")
+            .replace("-----END PRIVATE KEY-----", "")
+            .replaceAll("\\s", "");
 
         byte[] encoded = Base64.getDecoder().decode(privateKeyPEM);
 
@@ -49,11 +52,14 @@ public class JwtConfig {
         return keyFactory.generatePrivate(keySpec);
     }
 
-    private PublicKey loadPublicKey() throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
-        String publicKeyPEM = new String(Files.readAllBytes(publicKeyResource.getFile().toPath()))
-                .replace("-----BEGIN PUBLIC KEY-----", "")
-                .replace("-----END PUBLIC KEY-----", "")
-                .replaceAll("\\s", "");
+    private PublicKey loadPublicKey()
+        throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
+        String publicKeyPEM = new String(
+            publicKeyResource.getInputStream().readAllBytes()
+        )
+            .replace("-----BEGIN PUBLIC KEY-----", "")
+            .replace("-----END PUBLIC KEY-----", "")
+            .replaceAll("\\s", "");
 
         byte[] encoded = Base64.getDecoder().decode(publicKeyPEM);
 
